# shard

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  examples.mk  out
examples/: basic_rendering.cpp  breakout.cpp  main.cpp  modern_art.cpp  monkey.cpp  monkey.frag  monkey.vert  pong.cpp  tri.frag  tri.vert
examples/01-triangle/: CMakeLists.txt  main.cpp  tri.vert
examples/02-cube/: CMakeLists.txt  cube.frag  cube.vert  main.cpp
examples/03-texture/: CMakeLists.txt  main.cpp  texture.frag  texture.vert
examples/04-model/: CMakeLists.txt  main.cpp  model.frag  model.vert
examples/05-imgui/: CMakeLists.txt  main.cpp
examples/06-compute/: CMakeLists.txt  main.cpp  shader.comp  shader.frag  shader.vert
examples/06-compute-boids/: CMakeLists.txt  boids.comp  boids.frag  boids.vert  main.cpp
examples/breakout/: breakout.cpp  components.hpp
examples/shaders/: monkey.frag  monkey.vert  tri.vert
include/shard/: all.hpp  def.hpp  imgui.hpp  utils.hpp
include/shard/ecs/: componentArray.hpp  ecs.hpp  entity.hpp  system.hpp
include/shard/gfx/: buffer.hpp  color.hpp  compute.hpp  descriptor.hpp  device.hpp  framebuffer.hpp  gfx.hpp  image.hpp  model.hpp  pipeline.hpp  shaderModule.hpp  swapchain.hpp  vertex.hpp
include/shard/input/: input.hpp
include/shard/math/: v2.hpp
include/shard/random/: random.hpp
include/shard/renderer/: camera.hpp  renderer2d.hpp  texture.hpp  textureLoader.hpp
include/shard/sound/: sound.hpp
include/shard/time/: time.hpp
res/: normal.shader
shaders/: tri.vert
shaders/r2d/: rect.frag  rect.vert  rectInstanced.frag  rectInstanced.vert  sprite.frag  sprite.vert
src/: imgui.cpp  tolimpl.cpp  vmaimpl.cpp
src/ecs/: ecs.cpp
src/gfx/: buffer.cpp  compute.cpp  descriptor.cpp  device.cpp  framebuffer.cpp  gfx.cpp  image.cpp  model.cpp  pipeline.cpp  shaderModule.cpp  swapchain.cpp
src/input/: input.cpp
src/random/: random.cpp
src/renderer/: renderer2d.cpp  texture.cpp  textureLoader.cpp
src/sound/: sound.cpp
src/time/: time.cpp
